added to config